welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: not found: value n
	if (n<7 \ n>23)
            ^