welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = 
{
	if (n<7 \\ n>23)
	{
		return true
	} else {
		return false
	}
}
